sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value swapped
    swapped = false
    ^AlgBubbleSort1:5: error: not found: value length
    for(i <- 0 to length){
                  ^AlgBubbleSort1:8: error: not found: value swapped
        swapped = true
        ^AlgBubbleSort1:11: error: not found: value swapped
  } while(swapped)
          ^