sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  do{
    swapped = false
    for(i <- 0 to length){
      if(isSmallerThan(i + 1, i)){
        swap(i, i +1)
        swapped = true
      }
    }
  } while(swapped)
}